--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,user-scalable=no" />
-    <title>豆瓣电影</title>
+    <title>豆瓣电影(非官方) - by 米梦宇</title>
   </head>
   <body>
     <div id="app"></div>
